<resources>
    <string name="app_name">Dreamz app</string>
    <string name="already_a_user">Already A User?</string>
    <string name="log_in">log in</string>
    <string name="new_to_dreamz_app">New to Dreamz App? Sign up NOW!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">sign up</string>
    <string name="add_image">Add Image</string>
    <string name="first_name_tv">First name</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="last_name_tv">Last Name</string>
    <string name="choose">Choose</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="maps_api_key">AIzaSyBuwuFe6zVdFN-wWX357Ii0iAVUh0iaA0k</string>
    <string name="profile">Profile</string>
    <string name="create_account">Create Account</string>
    <string name="update">Update Account</string>
    <string name="create">Create Account</string>
</resources>